added model and footer

--- a/D7Homework.html
+++ b/D7Homework.html
@@ -6,7 +6,7 @@
 
         <title>Smartphone Phone</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="#">
+        <link rel="stylesheet" href="#"> 
     
     </head>
 
@@ -24,44 +24,51 @@
         </ul>
 
         <div id="iPhone">
-            <h3>Apple iPhone 12 Pro Max</h3>
+            <h3>Model: Apple iPhone 12 Pro Max</h3>
             <img src="https://bit.ly/2Son68n" alt="Apple iPhone 12 Pro Max">
-            <p></p>
+            <h3>Price: £1,090.50</h3>
 
 
         </div>
 
         <div id="Samsung">
-            <h3>Samsung Galaxy S20</h3>
+            <h3>Model: Samsung Galaxy S20</h3>
             <img src="https://bit.ly/3yvCZKK" alt="Samsung Galaxy S20">
-            <p></p>
+            <h3>Price: £590.99</h3>
 
 
         </div>
 
         <div id="Huawei">
-            <h3>HUAWEI Mate X2</h3>
+            <h3>Model: HUAWEI Mate X2</h3>
             <img src="https://bit.ly/2TjxJtF" alt="HUAWEI Mate X2">
-            <p></p>
+            <h3>Price: £1,109.00</h3>
 
 
         </div>
 
         <div id="OnePlus">
-            <h3>OnePlus N10</h3>
+            <h3>Model: OnePlus N10</h3>
             <img src="https://bit.ly/2RMzjUv" alt="OnePlus">
-            <p></p>
+            <h3>Price: £329.00</h3>
 
 
         </div>
 
         <div id="Xiaomi">
-            <h3>Xiaomi Mi 11 5G</h3>
-            <img src="https://bit.ly/3fMWbei" alt="Xiaomi">
-            <p></p>
+            <h3>Model: Xiaomi Mi 11 5G</h3>
+            <img src="https://bit.ly/3fiQ7eT" alt="Xiaomi">
+            <h3>Price: £599.99</h3>
 
 
         </div>
+
+        <footer>
+                Mobile Takeaway,
+                Chapel St Stranorlar,
+                County Donegal,
+                Ireland.
+        </footer>
         
 
 
