completed HTML exercises

--- a/D7Homework.html
+++ b/D7Homework.html
@@ -49,7 +49,7 @@
 
         <div id="OnePlus">
             <h3>Model: OnePlus N10</h3>
-            <img src="https://bit.ly/2RMzjUv" alt="OnePlus">
+            <img src="https://bit.ly/2RMzjUv" width="550" height="500" alt = "OnePlus">
             <h3>Price: £329.00</h3>
 
 
@@ -57,17 +57,25 @@
 
         <div id="Xiaomi">
             <h3>Model: Xiaomi Mi 11 5G</h3>
-            <img src="https://bit.ly/3fiQ7eT" alt="Xiaomi">
+            <img src="https://bit.ly/3fiQ7eT" width="550" height="550" alt="Xiaomi">
             <h3>Price: £599.99</h3>
 
 
         </div>
 
+        <form>
+            <textarea rows="10" cols="50"></textarea>
+            <br>
+            <input type="submit">
+          </form>
+          <br>
+            
+
         <footer>
                 Mobile Takeaway,
-                Chapel St Stranorlar,
-                County Donegal,
-                Ireland.
+                <br>Chapel St Stranorlar,
+                <br>County Donegal,
+                <br>Ireland.
         </footer>
         
 
